# SimpleStockAnalysisPython

./: 01_SimpleFetchStockData.ipynb  02_SimpleStockDate.ipynb  03_SimpleStockCharts.ipynb  pyproject.toml
