[tool.poetry]
name = "simplestockanalysispython"
version = "0.1.0"
description = ""
authors = ["User <user@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.0"
pandas = "^2.2.2"
yfinance = "^0.2.41"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
